--- a/test.html
+++ b/test.html
@@ -37,6 +37,8 @@
                     <li class="menu__link"><a href="">publications</a></li>
                     <li class="menu__link"><a href="">contact</a></li>
                 </ul>
+
+                <div>delet</div>
             </nav>
         </div>
         </header>
